--- a/templates/auth/sign-up.html
+++ b/templates/auth/sign-up.html
@@ -1,6 +1,39 @@
-<h1> Hello to Schoolify </h1>
-<form action="{% url 'sign up' %}" method="post">
-    {{ form.as_p}}
-    <button>Sign UP now!</button>
-    {% csrf_token %}
-</form>
+{% load static %}
+<html>
+<head>
+  <title>Schoolify</title>
+  <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/form.css'%}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/animenu.css'%}" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" >
+<div class="wrapper">
+
+<table border="0" cellpadding="0" cellspacing="0" width=520 height=400 class='form-box'>
+  <tr>
+    <td colspan="2" class="box-title" valign="top">
+      <table cellpadding="2" cellspacing="0" border="0" width="100%">
+        <tr>
+          <td width="100%" class="form-title-noborder" style="color: #C0C210; font-size: 16px;">Hello to Schoolify</td>
+        </tr>
+        <tr>
+          <td width="100%" class="form-rows-noborder">
+
+            <form action="{% url 'sign up' %}" method="post">
+                {{ form.as_p}}
+                <button>Sign UP now!</button>
+                {% csrf_token %}
+            </form>
+
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
+
+</div>
+</body>
+</html>
