added additional views to assignment app, MixIns, URLs and assignment-create.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <form method="get" action="{% url 'index' %}">
+    <h1>It works</h1>
     {{ form }}
 </form>
 <body>
