--- a/templates/assignment/assignment-create.html
+++ b/templates/assignment/assignment-create.html
@@ -1,3 +1,4 @@
 <form method="post" action="{% url 'assignment cooking create' %}">
-    {{ form }}
+    {{ form.as_p }}
+    <button>Submit assignment !</button>
     {% csrf_token %}
