added questions app and book app. additional updates implemented

--- a/templates/assignment/assignment-create.html
+++ b/templates/assignment/assignment-create.html
@@ -1,4 +1,42 @@
-<form method="post" action="{% url 'assignment cooking create' %}">
-    {{ form.as_p }}
-    <button>Submit assignment !</button>
-    {% csrf_token %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Create Assignment</title>
+</head>
+
+<body>
+<div id="box">
+
+    <header>
+        <!-- Navigation Bar -->
+{#        TODO: fix nav bar#}
+        <h1><a class="index-navigation" href="{% url 'index' %}"><span>S</span>CHOOLIFY <span>W</span>ELCOME</a></h1>
+        <nav>
+            <a href="{%  url 'index' %}">Catalogue</a>
+            <a href="{% url 'index' %}">Create Car</a>
+            <a href="{% url 'index' %}">Profile</a>
+        </nav>
+    </header>
+
+
+    <section id="create-page" class="auth">
+        <!-- create assignment form -->
+        <form method="post" action="{% url 'assignment cooking create' %}">
+            <div class="container">
+                {{ form }}
+                {% csrf_token %}
+                <input class="btn" type="submit" value="Submit assignment">
+            </div>
+        </form>
+    </section>
+</div>
+
+
+</body>
+</html>
+
