--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -1,185 +1,213 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 html {
-	height:100%
-}
-body {
-	width: 100%;
-	height: 100%;
-}
-.wrapper {
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -65px; /* the bottom margin is the negative value of the footer's height */
-}
-.footer, .push {
-	height: 65px; /* .push must be the same height as .footer */
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    box-sizing: border-box;
 }
 
 
-input.error {
-	background-color: yellow; 
-}
-
-.headerBtn {
-   background-color: #18599C;
-   color: #FFFFFF;
-   font-family: Arial, Helvetica, sans-serif;
-   font-weight: bold;
-   font-size: 11px;
-   margin: 3px;
-   padding: 3px;
-   text-decoration: none;
-   border:0px;
-   width:100px;
-}
-
-.headerLink {
-   background-color: #18599C;
-   color: #FFFFFF;
-   font-family: Arial, Helvetica, sans-serif;
-   font-weight: bold;
-   font-size: 11px;
-   margin: 3px;
-   padding: 5px;
-   text-decoration: none;
-   border:0px;
-   width:100px;
-}
-
-/* Tables & Divs */
-.table-splash {
-	/*border-top: 1px solid #DAD4D4;
-	border-bottom: 1px solid #DAD4D4;
-	background-image: url("/rfpadmin/img/home_splash_background.gif");*/
-		border-collapse: collapse;
-		border-spacing: 0;
-		border: 1px solid #ddd;
-		border-collapse: separate;
-		border-left: 0;
-		-webkit-border-radius: 4px;
-		-moz-border-radius: 4px;
-		border-radius: 4px;	
-}
-.table-splash th, 
-.table-splash td {
-	border-left: 1px solid #ddd;
-	padding: 4px 5px;
-}
-.table-splash th {
-	font-weight: bold;
-}
-.table-splash td {
-	padding: 2px;
-	line-height: 20px;
-	vertical-align: top;
-	border-top: 1px solid #ddd;
-	font-family: monospace;
-}
-	
-.table-footer {
-	border-top: 1px solid #A8A8A8;
-	border-bottom: 1px solid #A8A8A8;
-}
-
-.table-separator {
-	border-top: 1px solid #DAD4D4;
-	border-bottom: 1px solid #DAD4D4;
-	font-size: 3px;
+*,
+*::before,
+*::after {
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: inherit;
+    line-height: 1.3;
 }
 
 
-.span-footer-logo {
-	font-family: Arial;
-	font-weight: bold;
-	font-size: 13px;
-	color: #035B7F;
-	padding: 2px;	
+h1,
+h2,
+h4,
+h5,
+h6 {
+    padding: 0.2em 1rem;
 }
 
-.span-box-subtitle {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight: bold;
-	color: #015B7E;
-	background-color: #F7F7F7;
+p,
+div {
+    margin: 0 1em 0.5em 1em;
 }
 
-/* Cells & Rows */
-.td-linkbar {
-	background-color: #035B7F;
-	
+ol,
+ul {
+    margin: 0 1rem;
 }
 
-.td-footer {
-	border-top: 1px solid #FFFFFF;
-	border-bottom: 1px solid #FFFFFF;
-	background-color: #EFEFEF;
-	color: #000000;
-	height: 40px;
-	font-family: Verdana;
-	font-weight: normal;
-	font-size: 10px;
-	text-decoration: none;
-
+li {
+    list-style-position: inside;
 }
 
-.td-splash {
-	border-bottom: 1px solid #FFFFFF;
+button {
+    font-weight: bold;
+    padding: 0.2em;
+    margin: 0.2em;
+    border: 1px solid white;
+    border-radius: 0.3em;
+    background-color: transparent;
 }
 
-/* Links & anchors */
-a.link-main {
-	background-color: #035B7F;
-	color: #FFFFFF;
-	font-family: Arial;
-	font-weight: bold;
-	font-size: 12px;
-	width:125px;
-	text-decoration: none;
-	text-align: center;
-	padding:5px;
+a {
+    margin: 0.2em;
+    text-decoration: none;
+    font-weight: bold;
+    color: inherit;
 }
 
-a.link-main:hover {
-	color: #FAE009;
-	font-family: Arial;
-	font-weight: bold;
-	font-size: 12px;
-	width:125px;
-	text-decoration: none;
-	text-align: center;
-	padding:5px;
+#index-headline {
+    width: auto;
+    justify-content: right;
+    padding: 25px 15px 20px;
+    position: relative;
+    box-sizing: border-box;
+    text-align: center;
 }
 
-.link-secondary {
-	color: #AAA7A7;
-	font-family: Verdana;
-	font-weight: normal;
-	font-size: 10px;
-	text-decoration: none;
-	text-align: center;
+#index-headline .index-message {
+    display: inline-block;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    top: 40%;
+    text-align: center;
+    width: 30%
 }
 
-a.link-secondary {
-	color: #AAA7A7;
-	font-family: Verdana;
-	font-weight: normal;
-	font-size: 10px;
-	text-decoration: none;
-	text-align: center;
+.index-message>h2{
+    position: relative;
+    font-size: 50px;
+    left: 180px;
+    top: 20px;
 }
 
-a.link-secondary:hover {
-	color: #AAA7A7;
-	font-family: Verdana;
-	font-weight: normal;
-	font-size: 10px;
-	text-decoration: underline;
-	text-align: center;
+#index-headline>img {
+    height: auto;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 60%;
+    margin-left: auto;
 }
 
-.err {
-	font-size: 13px;
-	font-weight: bold;
-	color: red;
+.index-message h2 {
+    color: #ffffff;
+    font-size: 300%;
+    line-height: 1;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: uppercase;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-family: 'Monoton', cursive;
+}
+
+.index-message h2>span {
+    color: #3387C7;
+}
+
+#catalogue>h1{
+    text-align: center;
+    color: #134062;
+    text-transform: uppercase;
+    padding: 20px;
+    font-family: 'Cinzel', serif;
+    letter-spacing: 15px;
+}
+
+.car-card {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
+    margin-top: 20px;
+    padding: 50px;
+    margin-left: 50px;
+    background-position: right 35% bottom 45%;
+    box-sizing: border-box;
+    border-radius: 15px;
+    float: left;
+    height: auto;
+}
+
+.image-wrap {
+    width: 250px;
+    height: 250px;
+    display: inline-block;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+
+.image-wrap>img {
+    max-width: 100%;
+    height: 100%;
+}
+
+.details-buttons{
+    text-align: center;
+    margin-top: 50px;
+}
+.details-btn{
+    color: #fff;
+    border: none;
+    margin: 20px;
+    padding: 20px 30px;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    cursive: pointer;
+    border-radius: 20px;
+    transition: 0.5s;
+    transition-property: box-shadow;
+}
+
+.details-btn{
+    background: #3387C7;
+    box-shadow: 0 0 25px white;
+}
+
+.details-btn:hover{
+    box-shadow: 0 0 100px white;
+}
+.car-card>h3 {
+    font-family: "Agency FB", serif;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: normal;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: all 0.5s ease-out;
+    text-align: center;
+    text-transform: uppercase;
+}
+.car-card>h3,
+.car-card>h1{
+    color: #E2E8EA;
+    text-align: center;
+}
+
+.car-card>h1{
+    font-size: 15px;
+}
+
+
+
+#home-page>h1 {
+    color: rgb(252, 168, 151);
+    text-align: center;
+    font-weight: 700;
+    font-size: 84px;
+    font-family: "Agency FB", serif;
+}
+
+.no-articles {
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    font-size: 60px;
+    font-family: "Agency FB", serif;
 }
