--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,12 +1,10 @@
 {% load static %}
-{##TODO: fix JS and CSS#}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet"
-          href="{% static 'css/styles.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
+          href="{% static 'css/style.css' %}">
     <title>Schoolfy</title>
 
 </head>
@@ -22,7 +20,6 @@
 
 {% include 'common/footer.html' %}
 
-<script src="{% static 'main.js' %}"></script>
 
 </body>
 </html>
