--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -1,71 +1,50 @@
-{#TODO: check if below commented is needed or delete it#}
-{#<header>#}
-{#        <h1><a class="index-navigation" href="{% url 'index' %}"><span>S</span>CHOOLIFY <span>W</span>ELCOME</a></h1>#}
-{#        <nav>#}
-{#            <a href="{%  url 'index' %}">Catalogue</a>#}
-{#            <a href="{% url 'index' %}">Create Car</a>#}
-{#            <a href="{% url 'index' %}">Profile</a>#}
-{#        </nav>#}
-{#</header>#}
 
-{% load static %}
-
-<header>
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">
-                <a href="{% url 'index' %}">
-                    <img width="50px" src="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}"
-                         alt="img1">
-                </a>
-
-                <a class="home" href="{% url 'index' %}">
-                    <i>Schoolify</i>
-                </a>
-            </div>
-
-            <div class="nav-links">
-                <ul class="nav-group">
-{#                    <li class="nav-item">#}
-{##}
-{#                        <a href="{% url 'pet add' %}">#}
-{#                            <i>Add Pet</i>#}
-{#                        </a>#}
-{#                    </li>#}
-{#                    <li class="nav-item">#}
-{##}
-{#                        <a href="{% url 'photo add' %}">#}
-{#                            <i>Add Photo</i>#}
-{#                        </a>#}
-{#                    </li>#}
-                    {% if request.user.is_authenticated %}
-{#                        TODO: add profile details#}
-{#                        <li class="nav-item">#}
-{#                            <a href="{% url 'profile details' pk=request.user.pk %}">#}
-{#                                <i>{{ request.user.username }}</i>#}
-{#                            </a>#}
-{#                        </li>#}
-                        <li class="nav-item">
-                            <a href="{% url 'sign out' %}">
-                                <i>Logout</i>
-                            </a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a href="{% url 'sign in' %}">
-                                <i>Login</i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-
-                            <a href="{% url 'sign up' %}">
-                                <i>Register</i>
-                            </a>
-                        </li>
-                    {% endif %}
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="{% url 'index' %}">Schoolify</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      {% if request.user.is_authenticated%}
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Assignments
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{% url 'assignment cooking create' %}">Create Cooking</a>
+          <a class="dropdown-item" href="{% url 'assignment music create' %}">Create Music</a>
+          <a class="dropdown-item" href="{% url 'assignment english create' %}">Create English</a>
+          <a class="dropdown-item" href="{% url 'assignment mathematics create' %}">Create Mathematics</a>
+          <a class="dropdown-item" href="{% url 'assignment cooking list' %}">All Cooking</a>
+          <a class="dropdown-item" href="{% url 'assignment music list' %}">All Music</a>
+          <a class="dropdown-item" href="{% url 'assignment english list' %}">All English</a>
+          <a class="dropdown-item" href="{% url 'assignment mathematics list' %}">All Mathematics</a>
+\        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'books list' %}">Books</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="{% url 'questions all' %}" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Questions
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{% url 'questions all' %}">All</a>
+          <a class="dropdown-item" href="{% url 'question create' %}">Create</a>
+\        </div>
+      </li>
+        <li class="nav-item active">
+        <a class="nav-link" href="{% url 'sign out' %}">Sign Out <span class="sr-only">(current)</span></a>
+            {% else %}
+        <li class="nav-item active">
+        <a class="nav-link" href="{% url 'sign in' %}">Sign In <span class="sr-only">(current)</span></a>
+      </li>
+        <li class="nav-item active">
+        <a class="nav-link" href="{% url 'sign up' %}">Sign Up <span class="sr-only">(current)</span></a>
+      </li>
+            {% endif %}
+      </li>
+    </ul>
+  </div>
+</nav>
