--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<form method="get" action="{% url 'index' %}">
-    <h1>It works</h1>
-    {{ form }}
-</form>
-<body>
-
-</body>
-</html>
+{% include 'common/base.html' %}
