--- a/templates/assignment/assignment-list.html
+++ b/templates/assignment/assignment-list.html
@@ -1,3 +1,5 @@
+{% include 'common/base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +10,12 @@
 
 <ul>
     {% for assignment in object_list %}
+
         <li>
             {{ assignment.assignment_name }}
         </li>
+        {% empty %}
+        <h1> No submitted assignments yet</h1>
     {% endfor %}
 </ul>
 
