--- a/templates/book/books-list.html
+++ b/templates/book/books-list.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% include 'common/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -71,10 +72,6 @@
 
         </section>
 {% csrf_token %}
-    <!-- footer -->
-    <footer>
-        &copy;SoftUni Team 2022. All rights reserved.
-    </footer>
 </div>
 </body>
 </html>
