--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,5 +1,7 @@
+<footer>
 <div class="footer">
 		<span class="footer-section">
 			© 2023 Schoolify - All Rights Reserved
 		</span>
 </div>
+</footer>
