--- a/templates/auth/sign-out.html
+++ b/templates/auth/sign-out.html
@@ -1,5 +1,7 @@
+{% include 'common/base.html' %}
+
 <form method="post" action="{% url 'sign out' %}">
     {{ form }}
-    <button>Log out! </button>
+    <button>Log out </button>
     {% csrf_token %}
 </form>
