--- a/templates/auth/sign-up.html
+++ b/templates/auth/sign-up.html
@@ -1,3 +1,5 @@
+{% include 'common/base.html' %}
+
 {% load static %}
 <html>
 <head>
@@ -14,9 +16,6 @@
   <tr>
     <td colspan="2" class="box-title" valign="top">
       <table cellpadding="2" cellspacing="0" border="0" width="100%">
-        <tr>
-          <td width="100%" class="form-title-noborder" style="color: #C0C210; font-size: 16px;">Hello to Schoolify</td>
-        </tr>
         <tr>
           <td width="100%" class="form-rows-noborder">
 
