--- a/templates/auth/profile-delete.html
+++ b/templates/auth/profile-delete.html
@@ -11,7 +11,7 @@
 </head>
 
     <section id="delete-page" class="auth">
-        <form method="post" action="{% url 'profile delete' pk=profile.pk %}">
+        <form method="post" action="{% url 'profile delete' pk=user.pk %}">
             <div class="container">
 
                 <h1>Are you sure you want to delete your profile?</h1>
