--- a/templates/auth/profile-details.html
+++ b/templates/auth/profile-details.html
@@ -17,17 +17,15 @@
         <div class="info-section">
 {# TODO: fill other personal info #}
             <div class="car-header">
-                <h1>First Name:{{ profile.first_name}}</h1>
-                <!-- car model -->
+                <p><span class="description">First Name: {{ profile.first_name }}</span></p
                 <p><span class="description">Last Name: {{ profile.last_name}}</span></p>
-                <!-- car year -->
                 <p><span class="description">School Grade: {{ profile.school_grade }}</span></p>
+                <p><span class="description">Personal Number: {{ profile.user.personal_number}}</span></p>
             </div>
 
-
             <div class="buttons">
-                <a href="{% url 'profile edit' pk=object.pk %}" class="edit-button">Edit</a>
-                <a href="{% url 'profile delete' pk=object.pk %}" class="delete-button">Delete</a>
+                <a href="{% url 'profile edit' pk=profile.pk %}" class="edit-button">Edit</a>
+                <a href="{% url 'profile delete' pk=profile.pk %}" class="delete-button">Delete</a>
             </div>
         </div>
     </section>
