--- a/templates/auth/profile-edit.html
+++ b/templates/auth/profile-edit.html
@@ -15,14 +15,14 @@
 <div id="box">
 
     <section id="create-page" class="auth">
-        <form method="post" action="{% url 'edit profile' pk=profile.pk %}">
+        <form method="post" action="{% url 'profile edit' pk=user.pk %}">
             <div class="container">
 
                 <h1>Edit Profile</h1>
 
 {{ form }}
                 {% csrf_token %}
-                <input class="btn submit" type="submit" value="Edit Assignment">
+                <input class="btn submit" type="submit" value="Profile Edit">
             </div>
         </form>
     </section>
