added question search form + book search form + assignment .. list.html

--- a/templates/assignment/assignment-cooking-list.html
+++ b/templates/assignment/assignment-cooking-list.html
@@ -28,12 +28,13 @@
      {% endfor %}
 
             {% else %}
-        <p class="no-articles">No questions available</p>
+        <p class="no-articles">No assignments available</p>
             {% endif %}
 
         </section>
 {##TODO: fix paginator #}
 
+{% if assignmentcooking_list %}
 <div class="pagination">
     <span class="step-links">
         {% if page_obj.has_previous %}
@@ -54,5 +55,6 @@
         {% endif %}
     </span>
 </div>
+{% endif %}
 </body>
 </html>
