--- a/templates/assignment/assignment-mathematics-list.html
+++ b/templates/assignment/assignment-mathematics-list.html
@@ -28,12 +28,12 @@
      {% endfor %}
 
             {% else %}
-        <p class="no-articles">No questions available</p>
+        <p class="no-articles">No assignments available</p>
             {% endif %}
 
         </section>
 {##TODO: fix paginator #}
-
+{% if assignmentmathematics_list %}
 <div class="pagination">
     <span class="step-links">
         {% if page_obj.has_previous %}
@@ -54,5 +54,6 @@
         {% endif %}
     </span>
 </div>
+{% endif %}
 </body>
 </html>
