--- a/templates/book/books-list.html
+++ b/templates/book/books-list.html
@@ -22,6 +22,8 @@
 </form>
 </section>
 
+<a href="{% url 'book create' %}">Add a new book</a>
+
  {% if object_list %}
 
         <section id="catalogue">
