--- a/templates/book/books-list.html
+++ b/templates/book/books-list.html
@@ -22,7 +22,7 @@
 </form>
 </section>
 
-<a href="{% url 'book create' %}">Add a new book</a>
+{#<a href="{% url 'book create' %}">Add a new book</a>#}
 
  {% if object_list %}
 
