--- a/staticfiles/css/main_tate.css
+++ b/staticfiles/css/main_tate.css
@@ -151,6 +151,7 @@ a.link-main:hover {
 	padding:5px;
 }
 
+
 .link-secondary {
 	color: #AAA7A7;
 	font-family: Verdana;
@@ -182,4 +183,8 @@ a.link-secondary:hover {
 	font-size: 13px;
 	font-weight: bold;
 	color: red;
+}
+
+.step-links{
+    color: #8C959D;
 }
