--- a/templates/questions/questions.html
+++ b/templates/questions/questions.html
@@ -54,9 +54,9 @@
 
                                             <p>
                                                 Answer:{{ answer.comment_text }}
+                                            </p>
                                               <p>
-
-                                            Replied by student with ID:{{ answer.user.personal_number }} </p>
+                                                Replied by student with ID:{{ answer.user.personal_number }}
                                             </p>
                                         </div>
                                         <span>{{ answer.created_on }}</span>
@@ -67,7 +67,7 @@
                         <!-- End Comments Section -->
 
                         <!-- Start Add Comments Section -->
-                        <div class="addComments">
+                        <div class="addComments" >
                             <div class="reaction">
                                 <h3>
                                     <i class="far fa-smile"></i>
