--- a/templates/auth/sign-up.html
+++ b/templates/auth/sign-up.html
@@ -5,7 +5,7 @@
 <head>
   <title>Schoolify</title>
   <link href="{% static 'css/main_tate.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'css/form.css'%}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/forms.css'%}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/animenu.css'%}" rel="stylesheet" type="text/css" />
 </head>
 <body>
