--- a/templates/auth/sign-in.html
+++ b/templates/auth/sign-in.html
@@ -3,7 +3,7 @@
 <form action="{% url 'sign in' %}" method="post">
     {{ form.as_p }}
     <input name="next" type="hidden" value="{{ next }}">
-    <button>Sign in</button>
+    <input class="btn" type="submit" value="Sign in">
     {% csrf_token %}
 </form>
 
