--- a/templates/questions/questions.html
+++ b/templates/questions/questions.html
@@ -11,7 +11,7 @@
 <form method="get" action="{% url 'questions all' %}">
      <div class="container">
         <input name="pattern" placeholder="Search a question by question name..."/>
-        <input class="btn" type="submit" value="Submit question">
+        <input class="btn" type="submit" value="Search">
      </div>
 </form>
 </section>
